# flatbox

./: .gitignore  Cargo.toml  README.md  package-lock.json
crates/assets/: Cargo.toml
crates/assets/examples/: main.rs
crates/assets/src/: error.rs  lib.rs  manager.rs  prelude.rs  resources.rs  save_load.rs  scene.rs  ser_component.rs  serializer.rs
crates/core/: Cargo.toml
crates/core/src/: catch.rs  lib.rs  logger.rs  prelude.rs
crates/core/src/math/: mod.rs  transform.rs
crates/core/src/time/: mod.rs  timer.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: event.rs  lib.rs
crates/egui/: Cargo.toml
crates/egui/src/: backend.rs  command.rs  lib.rs  painter.rs
crates/macros/: Cargo.toml
crates/physics/: Cargo.toml
crates/physics/src/: error.rs  lib.rs
crates/render/: Cargo.toml
crates/render/examples/: basic.rs
crates/render/src/: error.rs  lib.rs  macros.rs  prelude.rs  renderer.rs
crates/render/src/context/: mod.rs
crates/render/src/gui/: backend.rs  painter.rs
crates/render/src/hal/: buffer.rs  mod.rs  shader.rs
crates/render/src/pbr/: camera.rs  color.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs
crates/render/src/shaders/: basic.fs  basic.vs  defaultmat.fs  defaultmat.vs
crates/systems/: Cargo.toml
crates/systems/src/: rendering.rs
docs/: 404.html  chapter_1.html  print.html
docs-src/: book.toml
docs/css/: chrome.css
examples/: basic.rs  serde.rs  texture.rs
src/: error.rs  extension.rs  lib.rs  prelude.rs
