[package]
name = "flatbox"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Rust ECS game engine with editor written in C#"
exclude = ["assets/"]
homepage = "https://konceptosociala.eu.org/software/flatbox"
keywords = ["game", "engine"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/konceptosociala/flatbox"

[workspace]
members = [
    "crates/*"
]

[dependencies]
flatbox_render = { path = "crates/render", version = "0.1.0"}
flatbox_ecs = { path = "crates/ecs", version = "0.1.0" }
