[package]
name = "flatbox"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Rust ECS game engine with editor written in C#"
exclude = ["assets/"]
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["game", "engine", "flatbox"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/konceptosociala/flatbox"

[workspace]
members = [
    "crates/*"
]

[dependencies]
pretty-type-name = "1.0.1"
thiserror = "1.0.49"

flatbox_assets = { path = "crates/assets", version = "0.2.0" }
flatbox_core = { path = "crates/core", version = "0.2.0" }
flatbox_ecs = { path = "crates/ecs", version = "0.2.0" }
flatbox_egui = { path = "crates/egui", version = "0.2.0", optional = true  }
flatbox_macros = { path = "crates/macros", version = "0.2.0" }
flatbox_render = { path = "crates/render", version = "0.2.0", optional = true }
flatbox_physics = { path = "crates/physics", version = "0.2.0", optional = true }
flatbox_systems = { path = "crates/systems", version = "0.2.0" }

[features]
default = ["egui", "render", "physics"]
render = ["dep:flatbox_render"]
physics = ["dep:flatbox_physics"]
egui = ["dep:flatbox_egui"]

[dev-dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive", "rc"] }
ron = "0.8.1"
bincode = "1.3.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3