[package]   
name = "flatbox_core"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Provides core functionality for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
colored = "2.0.4"
log = { version = "0.4.20", features = ["std"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }