[package]
name = "flatbox_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
as-any = "0.3.1"
flatbox_core = { version = "0.1.0", path = "../core" }
hecs = { package = "despero-hecs", version = "0.9.1-f", features = ["macros", "column-serialize"] }
hecs-schedule = { package = "despero-hecs-schedule", version = "0.6.2"}
parking_lot = { version = "0.12.0", features = ["serde"] }
pretty-type-name = "1.0.1"