[package]
name = "flatbox_ecs"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Provides ECS functionality for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox", "ecs"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
as-any = "0.3.1"
flatbox_core = { version = "0.2.0", path = "../core" }
hecs = { package = "despero-hecs", version = "0.9.1-f", features = ["macros", "column-serialize"] }
hecs-schedule = { package = "despero-hecs-schedule", version = "0.6.2"}
parking_lot = { version = "0.12.0", features = ["serde"] }
pretty-type-name = "1.0.1"