[package]
name = "flatbox_egui"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Egui binding for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
flatbox_render = { version = "0.2.0", path = "../render"}
flatbox_assets = { version = "0.2.0", path = "../assets" }
flatbox_core = { version = "0.2.0", path = "../core" }
flatbox_ecs = { version = "0.2.0", path = "../ecs" }

anyhow = "1.0.75"
bytemuck = "1.7.2"
egui = { version = "0.19", features = ["bytemuck"] }
egui-winit = { version = "0.19.0", default-features = false, features = ["clipboard", "links"] }
parking_lot = { version = "0.12.0", features = ["serde"] }