[package]
name = "flatbox_macros"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Flatbox engine procedural macros"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
