[package]
name = "flatbox_physics"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Provides physics for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
