[package]
name = "flatbox_physics"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Provides physics for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
