[package]
name = "flatbox_physics"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "rendering"]
description = "Provides physics for Flatbox engine"
homepage = "https://konceptosociala.eu.org/flatbox"
keywords = ["flatbox"]
license = "Unlicense"
repository = "https://github.com/konceptosociala/flatbox"

[dependencies]
flatbox_render = { version = "0.2.0", path = "../render", optional = true }
flatbox_core = { version = "0.2.0", path = "../core" }
rapier3d = { version = "0.19.0", features = ["serde-serialize"] }
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive", "rc"] }

[features]
render = ["dep:flatbox_render"]
