[package]
name = "flatbox_render"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbox_assets = { version = "0.1.0", path = "../assets" }
flatbox_core = { version = "0.1.0", path = "../core" }
flatbox_ecs = { version = "0.1.0", path = "../ecs", optional = true }

bytemuck = "1.7.2"
casey = "0.4.0"
egui = { version = "0.19", features = ["bytemuck"] }
egui-winit = { version = "0.19.0", default-features = false, features = ["clipboard", "links"] }
gl = "0.14.0"
glutin = { version = "0.29.1", optional = true, features = ["x11"] }
image = "0.24.5"
palette = "0.7.3"
parking_lot = { version = "0.12.0", features = ["serde"] }
pretty-type-name = "1.0.1"
readonly = "0.2.11"
serde = { version = "1.0.188", features = ["derive", "rc"] }
thiserror = "1.0.49"

[features]
default = ["context", "ecs"]

context = ["dep:glutin"]
ecs = ["dep:flatbox_ecs"]